# orjson-benchmark-visualizer

./: README.md  app.py  procfile  pyproject.toml  requirements.txt
orjson_benchmark_visualizer/: streamlit_app.py
orjson_benchmark_visualizer/benchmarks/indent/: benchmark.json  benchmark.rst
orjson_benchmark_visualizer/benchmarks/latency/dumps/: benchmark.json  benchmark.rst
orjson_benchmark_visualizer/benchmarks/latency/empty/: benchmark.json  benchmark.rst
orjson_benchmark_visualizer/benchmarks/latency/loads/: benchmark.json  benchmark.rst
orjson_benchmark_visualizer/benchmarks/memory/: benchmark.rst
orjson_benchmark_visualizer/benchmarks/sort/: benchmark.json  benchmark.rst
orjson_benchmark_visualizer/benchmarks/types/dataclass/: benchmark.json  benchmark.rst
orjson_benchmark_visualizer/benchmarks/types/numpy/: benchmark.json  benchmark.rst
tests/: test_orjson_benchmark_visualizer.py
