[tool.poetry]
name = "orjson-benchmark-visualizer"
version = "0.1.0"
description = ""
authors = ["Dennis Fuchs <fudennis@gmx.de>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.8.1"
plotly = "^5.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
